fixed jquery slide show added horizontalas below popular posts to stretch theme removed logo for time being added hover for tabs reduced headlines font chagned background to cover

--- a/app/assets/stylesheets/new.scss
+++ b/app/assets/stylesheets/new.scss
@@ -26,6 +26,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-color: black;
+  background-size: cover;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 input[type=submit] {
@@ -36,6 +37,7 @@ input[type=submit] {
   font-size: 12px;
   &:hover {
     background-color: #a00000;
+
   }
   &:active {
     background-color: #900000;
@@ -62,6 +64,13 @@ h2 {
   font-family: Share, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+
+#headline_header{
+  
+
+}
+
+
 .container {
   width: 940px;
   margin: 0 auto;
@@ -71,6 +80,7 @@ h2 {
   padding: 10px;
   width: 100%;
   background-color: rgba(50,50,50,0.7);
+  background-color: black;
   #search_box_container {
     float: right;
     margin-right: 12px;
@@ -82,12 +92,27 @@ h2 {
   height: 125px;
   #logo {
     float: left;
-    margin-left: -30px;
+    margin-left: 0px;
+  }
+
+  h4{
+    float: left;
+    color: lightgray;
+    margin: 80px 0 0px 0;
+    text-shadow: 0px 5px 5px maroon;
+    text-transform: uppercase;
+    font-family: 'Kelly Slab', cursive;
+    font-size: 45px;
+    width: auto;
+    height: auto;
+    letter-spacing: 5px;
+
+
   }
   #sign_in_container {
     float: right;
     position: relative;
-    width: 500px;
+    width: 400px;
     height: 125px;
     #sign_in_box {
       text-align: left;
@@ -130,6 +155,9 @@ h2 {
         text-decoration: none;
         &:hover {
           color: #ccc;
+            background-color: maroon;
+            border-radius: 5px;
+            padding: 3px;
         }
       }
     }
@@ -138,6 +166,7 @@ h2 {
 
 #upper_ad_container {
   height: 90px;
+
 }
 #upper_separator {
   background-color: maroon;
@@ -157,7 +186,7 @@ h2 {
     #recent_articles {
       float: left;
       width: $right_width;
-      height: 450px;
+      height: 433px;
       ul {
         list-style-type: none;
         margin: 0;
@@ -209,6 +238,7 @@ h2 {
         li {
           padding: 5px 10px 5px 0;
           a {
+            font-size: 14px;
             color: #777;
             &:hover {
               color: #aaa;
@@ -265,6 +295,7 @@ h2 {
     position: absolute;
     right: 0;
     top: -50px;
+      
   }
 }
 
