--- a/app/assets/stylesheets/views/homepage.css
+++ b/app/assets/stylesheets/views/homepage.css
@@ -150,7 +150,7 @@ h3.section-title {
   padding-left: 15px;
   line-height: 1.2em;
   height: 120px;
-  width: 450px;
+  width: 425px;
   overflow: hidden;
 }
 .popular-post-triplet-1-image-thumbnail {
